[package]
name = "plonky2_ecdsa"
description = "ECDSA gadget for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
parallel = ["plonky2_maybe_rayon/parallel", "plonky2/parallel"]

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
num = { version = "0.4.0", default-features = false }
itertools = { version = "0.11.0", default-features = false }

plonky2_u32 = { path = "plonky2-u32" }
plonky2_maybe_rayon = { path = "plonky2/maybe_rayon" }
plonky2 = { path = "plonky2/plonky2" }
plonky2_field = {path = "plonky2/field" }

serde = { version = "1.0", default-features = false, features = ["derive"] }
rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }
env_logger = "0.11.3"
log = "0.4.14"
clap = { version = "4.0.29", features = ["derive"] }
hex-literal = "0.4.1"

[profile.release]
opt-level = 3
#lto = "fat"
#codegen-units = 1

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 0
